--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "template-builder-demo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://trantrongnhanttn.github.io/template-builder",
+  "homepage": "https://trantrongnhanttn.github.io/template-builder-demo-master",
   "dependencies": {
     "@luctc/template-builder": "1.0.12",
     "@testing-library/jest-dom": "^5.16.4",
